--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
+	<meta charset='utf-8'>
 	<title>hello kindling</title>
+	<style>div, span {
+  background-color: blue;
+}</style>
 </head>
 <body>
-<h1>hwllo kindling<h1>
+ <div>Hello</div>
+  <span>World!</span>
 </body>
 </html>
